xonshrc 在加载 init.xsh 脚本前先加载 prepare.xsh
prepare.sh 一般设置环境变量或者编码等

--- a/templates/xonshrc.template
+++ b/templates/xonshrc.template
@@ -12,5 +12,9 @@ $FORCE_POSIX_PATHS = True
 
 source_alias = aliases['source']
 
+prepare_xsh_path=os.path.join($XONSHRCD_DIR, 'prepare.xsh')
+if os.path.isfile(prepare_xsh_path):
+  source_alias([prepare_xsh_path,])
+
 init_xsh_path=os.path.join($XONSHRCD_DIR, 'init.xsh')
 source_alias([init_xsh_path,])
